--- a/exercises/index.html
+++ b/exercises/index.html
@@ -18,9 +18,17 @@
     <script src="../mobilecsp-2017/quizly-desc.js"></script>
     <script src="../mobilecsp-2017/syllabus.js"></script>
 
+    <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/pure-min.css"
+      integrity="sha384-nn4HPE8lTHyVtfCBi5yW9d20FjT8BJwUXyWZT9InLYax14RDjBj46LmSztkmNP9w"
+      crossorigin="anonymous">
+
   </head>
 
   <body>
+    <div id="loader" class="load-container load3">
+      <div class="loader"></div>
+    </div>
+
     <div id="chart"></div>
 
     <div id="filter" class="pure-form">
